Review Request 8133 see PLS-3112, PLS-3096 - fixed enabled filter for insights tab case - fixed filtering for highlighted/hidden so it doesn't break in other tabs and hide attributes

--- a/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
+++ b/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
@@ -48,7 +48,7 @@
                 &.dropdown-container {
                     z-index: 2;
                     .dropdown {
-                        .selected, .highlighted {
+                        .selected, .enabled, .highlighted {
                             &.hide {
                                 border-bottom: 1px solid #333;
                                 padding-bottom: 5px;
